# ml

./: .dockerignore  Dockerfile  Dockerfile.base  dataset.py  main.py  preparation.ipynb  pyproject.toml  req.txt  tft.ipynb  tst.ipynb
arima/: arima.py
data/: db.py  get_data.py
models/: prediction-net-state.pt  predictor.json
models/1/: predictor.json
models/3/: predictor.json
train/: arima.ipynb  gradient.ipynb  patch_tst.ipynb
