[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["j.suess <jonas.suess@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
xgboost = "^2.1.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
