[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["j.suess <jonas.suess@tum.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
gluonts = "^0.16.0"
torch = "^2.5.1"
lightning = "^2.4.0"
psycopg-binary = "^3.2.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
